hopefully this fixes the unevennes lmacken saw in the 'learn more' buttons on the main tour menu page

--- a/fedoracommunity/public/css/myfedora-branding.css
+++ b/fedoracommunity/public/css/myfedora-branding.css
@@ -15,22 +15,27 @@ div#head h1 a {
   font-weight: normal;
 }
 
-.col-spread div {
+.col-spread > div {
   width: 30%;
   float: left;
   margin: 10px;
 }
 
-.col-spread div p {
+.col-spread div div {
   background-color: #eee;
   -moz-border-radius: 6px;
   padding: 1em;
   margin-top: .4em;
 }
 
+.col-spread div p {
+  min-height: 16em !important;
+}
+
 .col-spread a.button:link, 
 .col-spread a.button:visited, 
 .col-spread a.button:active {
+  display: block;
   background-color: #66a2de;
   color: white !important;
   -moz-border-radius: 3px;
@@ -39,6 +44,9 @@ div#head h1 a {
   text-transform: uppercase;
   font-weight: bold;
   text-decoration: none;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
 }
 
 
